<resources>
    <string name="app_name">Weatherex</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty">Empty</string>
    <string name="prewData">03/05/2023 4:03</string>
    <string name="prewCity">Saint-Peterburg</string>
    <string name="prewTemp">20°С</string>
    <string name="prewCond">Sunny</string>
    <string name="prewmaxminTemp">34°С/15°С</string>
    <string name="hours">HOURS</string>
    <string name="days">DAYS</string>
    <string name="lsData">Data 05.05.2023</string>
    <string name="icon">Icon</string>
    <string name="background">Background</string>
    <string name="appName">Weatherex</string>
    <string name="current">CURRENT</string>
    <string name="_100">100</string>
    <string name="cloud">Cloud</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="moon">Moon</string>
    <string name="wind_dir">Wind dir</string>
    <string name="pressure">Pressure</string>
    <string name="country">Country</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="please_wait_this_may_take_a_moment">Please wait! This may take a moment.</string>
    <string name="weather_radar">Weather Radar</string>
    <string name="settings">Settings</string>
    <string name="air">Air</string>
    <string name="choose_the_theme">Choose the theme:</string>
    <string name="navigation_menu">Navigation Menu</string>
    <string-array name="background_colors">
        <item>Standart theme</item>
        <item>Sunset theme</item>
        <item>Sunrise theme</item>
    </string-array>


</resources>