<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:backgroundTint="@color/ccBlue"
    android:backgroundTintMode="multiply"
    app:cardCornerRadius="10dp"
    tools:context=".view.fragments.CurrentFragment">

    <LinearLayout
        android:id="@+id/options_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:baselineAligned="false"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/cloud_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/cloud_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/clouds"
                    android:adjustViewBounds="true">

                </ImageView>

                <TextView
                    android:id="@+id/cloud_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/_100"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/cloud"
                    android:textColor="@color/white">

                </TextView>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/humidity_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/humidity_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/humidity">

                </ImageView>

                <TextView
                    android:id="@+id/humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/_100"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/humidity"
                    android:textColor="@color/white">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/wind_khm_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/wind_khm_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/wind_khm">

                </ImageView>

                <TextView
                    android:id="@+id/wind_khm_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/_100"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/wind_speed"
                    android:textColor="@color/white">

                </TextView>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:baselineAligned="false"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/sunrise_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/sunrise_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/sunrise">

                </ImageView>

                <TextView
                    android:id="@+id/sunrise_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/_100"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/sunrise"
                    android:textColor="@color/white">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sunset_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/sunset_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/sunset">

                </ImageView>

                <TextView
                    android:id="@+id/sunset_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/_100"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/sunset"
                    android:textColor="@color/white">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/moon_phase_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/moon_phase"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/moon_phase">

                </ImageView>

                <TextView
                    android:id="@+id/moon_phase_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/_100"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/moon"
                    android:textColor="@color/white">

                </TextView>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:baselineAligned="false"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/wind_dir_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/wind_dir_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/wind_dir">

                </ImageView>

                <TextView
                    android:id="@+id/wind_dir_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/_100"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/wind_dir"
                    android:textColor="@color/white">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pressure_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/pressure_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/pressure_mb">

                </ImageView>

                <TextView
                    android:id="@+id/pressure_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/_100"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/pressure"
                    android:textColor="@color/white">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/country_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/country"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/country">

                </ImageView>

                <TextView
                    android:id="@+id/country_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/_100"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/country"
                    android:textColor="@color/white">

                </TextView>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:baselineAligned="false"
            android:weightSum="3">
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>